<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/setting_clear_data"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="6pt"
        android:clickable="true"
        android:background="@drawable/textview_selector"
        android:id="@+id/textViewClearData"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:clickable="true"
        android:background="@drawable/textview_selector"
        android:id="@+id/layoutVibrationSetting"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_vibrate"
            android:textSize="6pt"
            android:layout_alignTop="@+id/checkBoxVibration"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/checkBoxVibration"
            android:clickable="false"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/title_licenses"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="6pt"
        android:clickable="true"
        android:background="@drawable/textview_selector"
        android:id="@+id/textViewLicenses"
        />


</LinearLayout>