<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/buttonEasyLevel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="#FFFFFF"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="#7ab800"
            app:fb_focusColor="#9bd823"
            app:fb_fontIconResource="&#xf005;"
            app:fb_iconPosition="left"
            app:fb_radius="30dp"
            app:fb_text="@string/easy_level"
            app:fb_textColor="#FFFFFF"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/buttonMediumLevel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="#FFFFFF"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="#7ab800"
            app:fb_focusColor="#9bd823"
            app:fb_fontIconResource="&#xf005;&#xf005;"
            app:fb_iconPosition="left"
            app:fb_radius="30dp"
            app:fb_text="@string/medium_level"
            app:fb_textColor="#FFFFFF"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/buttonHardLevel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="#FFFFFF"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="#7ab800"
            app:fb_focusColor="#9bd823"
            app:fb_fontIconResource="&#xf005;&#xf005;&#xf005;"
            app:fb_iconPosition="left"
            app:fb_radius="30dp"
            app:fb_text="@string/hard_level"
            app:fb_textColor="#FFFFFF"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

</LinearLayout>
